[CON-785] Pass selected option set object with edit event

--- a/oc-option-sets-list.html
+++ b/oc-option-sets-list.html
@@ -37,7 +37,7 @@ Element displaying a list of option sets
       },
 
       _onEditTapped: function() {
-        this.fire('edit', 1111)
+        this.fire('edit', {id:12})
       }
     });
   </script>
